@@ -486,7 +486,7 @@ specified, the content is parsed by the Pygments_ syntax highlighter and
 tokens are stored in nested `inline elements`_ with class arguments
 according to their syntactic category. The actual highlighting requires
 a style-sheet (e.g. one `generated by Pygments`__, see the
-`sandbox/stylesheets`_ for examples).
+`sandbox/stylesheets`__ for examples).
 
 The parsing can be turned off with the syntax_highlight_ configuration
 setting and command line option or by specifying the language as `:class:`_
@@ -515,11 +515,11 @@ and the common options `:class:`_ and `:name:`_.
 Example::
   The content of the following directive ::
 
-   .. code:: python
+    .. code:: python
 
-    def my_function():
-        "just a test"
-        print 8/2
+      def my_function():
+          "just a test"
+          print 8/2
 
   is parsed and marked up as Python source code.
 
@@ -538,22 +538,27 @@ Math
 
 (New in Docutils 0.8)
 
-The "math" directive inserts block(s) with mathematical content
+The "math" directive inserts blocks with mathematical content
 (display formulas, equations) into the document. The input format is
-*LaTeX math syntax* (see, e.g. the `Short Math Guide`_) with support
-for Unicode symbols, for example::
+*LaTeX math syntax*\ [#math-syntax]_ with support for Unicode
+symbols, for example::
 
   .. math::
 
     α_t(i) = P(O_1, O_2, … O_t, q_t = S_i λ)
 
-For inline math, use the `"math" role`_.
+Support is limited to a subset of *LaTeX math* by the conversion
+required for many output formats.  For HTML, the the `math_output`_
+configuration setting (or the corresponding ``--math-output``
+command line option) select between alternative output formats with
+different subsets of supported elements. If a writer does not
+support math typesetting at all, the content is inserted verbatim.
 
-Support for math may be limited by the output format. If a writer does
-not support math typesetting, the content is inserted verbatim.
-For HTML, the output format can be set with the `math_output`_
-configuration setting (or the corresponding ``--math-output`` command
-line option).
+.. [#math-syntax] The supported LaTeX commands include AMS extensions
+   (see, e.g., the `Short Math Guide`_).
+
+
+For inline math, use the `"math" role`_.
 
 .. _Short Math Guide: ftp://ftp.ams.org/ams/doc/amsmath/short-math-guide.pdf
 .. _"math" role: roles.html#math
@@ -803,14 +808,21 @@ are recognized within cells.
 
 Working limitations:
 
-* Whitespace delimiters are supported only for external CSV files.
-
 * There is no support for checking that the number of columns in each
   row is the same.  However, this directive supports CSV generators
   that do not insert "empty" entries at the end of short rows, by
   automatically adding empty entries.
 
   .. Add "strict" option to verify input?
+
+.. [#whitespace-delim] Whitespace delimiters are supported only for external
+   CSV files.
+
+.. [#ASCII-char] With Python 2, the valuess for the ``delimiter``,
+   ``quote``, and ``escape`` options must be ASCII characters. (The csv
+   module does not support Unicode and all non-ASCII characters are
+   encoded as multi-byte utf-8 string). This limitation does not exist
+   under Python 3.
 
 The following options are recognized:
 
@@ -841,28 +853,29 @@ The following options are recognized:
     The text encoding of the external CSV data (file or URL).
     Defaults to the document's encoding (if specified).
 
-``delim`` : char | "tab" | "space"
-    A one-character string used to separate fields.  Defaults to ``,``
-    (comma).  May be specified as a Unicode code point; see the
-    unicode_ directive for syntax details.
+``delim`` : char | "tab" | "space" [#whitespace-delim]_
+    A one-character string\ [#ASCII-char]_ used to separate fields.
+    Defaults to ``,`` (comma).  May be specified as a Unicode code
+    point; see the unicode_ directive for syntax details.
 
 ``quote`` : char
-    A one-character string used to quote elements containing the
-    delimiter or which start with the quote character.  Defaults to
-    ``"`` (quote).  May be specified as a Unicode code point; see the
-    unicode_ directive for syntax details.
+    A one-character string\ [#ASCII-char]_ used to quote elements
+    containing the delimiter or which start with the quote
+    character.  Defaults to ``"`` (quote).  May be specified as a
+    Unicode code point; see the unicode_ directive for syntax
+    details.
 
 ``keepspace`` : flag
     Treat whitespace immediately following the delimiter as
     significant.  The default is to ignore such whitespace.
 
 ``escape`` : char
-    A one-character string used to escape the delimiter or quote
-    characters.  May be specified as a Unicode code point; see the
-    unicode_ directive for syntax details.  Used when the delimiter is
-    used in an unquoted field, or when quote characters are used
-    within a field.  The default is to double-up the character,
-    e.g. "He said, ""Hi!"""
+    A one-character\ [#ASCII-char]_ string used to escape the
+    delimiter or quote characters.  May be specified as a Unicode
+    code point; see the unicode_ directive for syntax details.  Used
+    when the delimiter is used in an unquoted field, or when quote
+    characters are used within a field.  The default is to double-up
+    the character, e.g. "He said, ""Hi!"""
 
     .. Add another possible value, "double", to explicitly indicate
        the default case?
